After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 632681 - tp_account_get_storage_restrictions: assertion `TP_IS_ACCOUNT (self)' failed when creating an account
tp_account_get_storage_restrictions: assertion `TP_IS_ACCOUNT (self)' failed ...
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: Accounts
2.29.x
Other Linux
: High major
: ---
Assigned To: empathy-maint
Depends on:
Blocks:
 
 
Reported: 2010-10-20 11:43 UTC by Guillaume Desmottes
Modified: 2011-08-29 10:12 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch (2.30 KB, patch)
2010-10-21 02:39 UTC, Danielle Madeley
reviewed Details | Review

Description Guillaume Desmottes 2010-10-20 11:43:09 UTC
Empathy master, hit the "add" button in the accounts dialog:


tp-glib-CRITICAL **: tp_account_get_storage_restrictions: assertion `TP_IS_ACCOUNT (self)' failed
aborting...

Program received signal SIGTRAP, Trace/breakpoint trap.
0x00007fffef8ffc88 in g_logv (log_domain=0x7ffff178f680 "tp-glib", log_level=G_LOG_LEVEL_CRITICAL, format=0x7fffef97aab8 "%s: assertion `%s' failed", 
    args1=0x7fffffffc150) at gmessages.c:553
553			G_BREAKPOINT ();
(gdb) bt
  • #0 g_logv
    at gmessages.c line 553
  • #1 g_log
    at gmessages.c line 577
  • #2 g_return_if_fail_warning
  • #3 tp_account_get_storage_restrictions
    at account.c line 3310
  • #4 do_constructed
    at empathy-account-widget.c line 1948
  • #5 g_object_newv
    at gobject.c line 1491
  • #6 g_object_new_valist
    at gobject.c line 1579
  • #7 g_object_new
    at gobject.c line 1297
  • #8 empathy_account_widget_new_for_protocol
    at empathy-account-widget.c line 2273
  • #9 account_dialog_create_settings_widget
    at empathy-accounts-dialog.c line 488
  • #10 accounts_dialog_update_settings
    at empathy-accounts-dialog.c line 845
  • #11 accounts_dialog_model_selection_changed
    at empathy-accounts-dialog.c line 1259
  • #12 g_cclosure_marshal_VOID__VOID
    at gmarshal.c line 79
  • #13 g_closure_invoke
    at gclosure.c line 766
  • #14 signal_emit_unlocked_R
    at gsignal.c line 3252
  • #15 g_signal_emit_valist
    at gsignal.c line 2983
  • #16 g_signal_emit
    at gsignal.c line 3040
  • #17 _gtk_tree_selection_internal_select_node
    at gtktreeselection.c line 1418
  • #18 gtk_tree_selection_select_path
    at gtktreeselection.c line 751
  • #19 gtk_tree_selection_select_iter
    at gtktreeselection.c line 819
  • #20 accounts_dialog_model_set_selected
    at empathy-accounts-dialog.c line 1486
  • #21 accounts_dialog_setup_ui_to_add_account
    at empathy-accounts-dialog.c line 593
  • #22 accounts_dialog_button_add_clicked_cb
    at empathy-accounts-dialog.c line 770
  • #23 g_cclosure_marshal_VOID__VOID
    at gmarshal.c line 79
  • #24 g_closure_invoke
    at gclosure.c line 766
  • #25 signal_emit_unlocked_R
    at gsignal.c line 3252
  • #26 g_signal_emit_valist
    at gsignal.c line 2983
  • #27 g_signal_emit
    at gsignal.c line 3040
  • #28 gtk_button_clicked
    at gtkbutton.c line 1200
  • #29 gtk_real_button_released
    at gtkbutton.c line 1798
  • #30 g_cclosure_marshal_VOID__VOID
    at gmarshal.c line 79
  • #31 g_type_class_meta_marshal
  • #32 g_closure_invoke
    at gclosure.c line 766
  • #33 signal_emit_unlocked_R
    at gsignal.c line 3182
  • #34 g_signal_emit_valist
    at gsignal.c line 2983
  • #35 g_signal_emit
    at gsignal.c line 3040
  • #36 gtk_button_released
    at gtkbutton.c line 1186
  • #37 gtk_button_button_release
    at gtkbutton.c line 1690
  • #38 _gtk_marshal_BOOLEAN__BOXED
    at gtkmarshalers.c line 85
  • #39 g_type_class_meta_marshal
    at gclosure.c line 877
  • #40 g_closure_invoke
    at gclosure.c line 766
  • #41 signal_emit_unlocked_R
    at gsignal.c line 3290
  • #42 g_signal_emit_valist
    at gsignal.c line 2993
  • #43 g_signal_emit
    at gsignal.c line 3040
  • #44 gtk_widget_event_internal
    at gtkwidget.c line 5870
  • #45 gtk_widget_event
    at gtkwidget.c line 5580
  • #46 gtk_propagate_event
    at gtkmain.c line 2540
  • #47 gtk_main_do_event
    at gtkmain.c line 1753
  • #48 gdk_event_source_dispatch
    at gdkeventsource.c line 303
  • #49 g_main_dispatch
    at gmain.c line 2149
  • #50 g_main_context_dispatch
    at gmain.c line 2702
  • #51 g_main_context_iterate
    at gmain.c line 2780
  • #52 g_main_loop_run
    at gmain.c line 2988
  • #53 gtk_main
    at gtkmain.c line 1321
  • #54 gtk_application_default_run
    at gtkapplication.c line 126
  • #55 g_application_run
    at gapplication.c line 886
  • #56 gtk_application_run
    at gtkapplication.c line 491

Comment 2 Guillaume Desmottes 2010-10-21 07:52:16 UTC
Review of attachment 172890 [details] [review]:

Do we still have the "Login" button when creating an account? If yes, ++