Don't assume account will exist when accessing storage restrictions

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=632681